--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
@@ -15,5 +15,33 @@ code {
 }
 
 ul {
-  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.nav-link.active {
+  color: green;
+}
+
+a.active {
+  color: rgba(69, 144, 243, 0.856);
+}
+
+a:hover,
+a:focus {
+  color: rgba(69, 144, 243, 0.856);
 }
