Revert "feature/phonebook_auth"
This reverts commit dd1a840969e91fc3e67a2a96a982eb3bb5f6226a.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize;
+@import-normalize; /* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -15,33 +15,5 @@ code {
 }
 
 ul {
-  margin: 0px;
-  padding: 0px;
-}
-
-p {
-  margin: 0px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  margin-bottom: 25px;
-}
-
-.nav-link.active {
-  color: green;
-}
-
-a.active {
-  color: rgba(69, 144, 243, 0.856);
-}
-
-a:hover,
-a:focus {
-  color: rgba(69, 144, 243, 0.856);
+  list-style: none;
 }
