--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -2,11 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgb(86, 67, 196);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 10px;
   width: 100%;
+  color: white;
 }
 
 .item:not(:last-child) {
@@ -22,11 +23,12 @@
   cursor: pointer;
   padding: 5px 12px;
   border-radius: 5px;
-  border: 1px solid rgb(33, 33, 33);
+  border: 2px solid white;
   background-color: whitesmoke;
+  color: white;
 }
 
 .button:hover,
 .button:focus {
-  background-color: rgb(25, 112, 233);
+  background-color: rgba(25, 112, 233, 0.589);
 }
