--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-  color: black;
+  color: white;
   text-align: center;
 }
 
@@ -10,8 +10,8 @@
   display: flex;
   justify-content: center;
   padding: 20px;
-  background: #bbcecb;
-  border-radius: 43px 43px 0px 0px;
+  background: #2d0c8a;
+  border-radius: 0px 0px 10px 10px;
   position: fixed;
   bottom: 0;
   right: 0;
