--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -8,7 +8,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgb(86, 67, 196);
   border: 1px solid rgba(0, 0, 0, 0.1);
   max-width: 400px;
   align-items: flex-start;
@@ -22,9 +22,9 @@
   padding: 5px 12px;
   border-radius: 5px;
   border: 1px solid rgb(33, 33, 33);
-  background-color: whitesmoke;
+  background-color: rgb(118, 107, 180);
 }
 
 .button:hover {
-  background-color: rgb(25, 112, 233);
+  background-color: rgb(53, 50, 240);
 }
