--- a/src/components/contactList/ContactList.module.css
+++ b/src/components/contactList/ContactList.module.css
@@ -14,7 +14,7 @@
 .item_span {
     font-size: 16px;
     font-weight: 400;
-    color: blue;
+    color: white;
 }
 
 .item_btn {
@@ -24,8 +24,9 @@
     padding: 5px;
     cursor: pointer;
     border-radius: 4px;
-    background-color: white;
-    border: 1px solid rgb(23, 23, 23);
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
     box-shadow: 2px 2px 14px -6px rgba(75, 75, 78, 1);
     transition: transform 200ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
         color 200ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
@@ -34,5 +35,5 @@
 .item_btn:hover,
 .item_btn:focus {
     transform: scale(1.05);
-    color: rgb(248, 9, 9);
+    color: rgb(61, 9, 248);
 }
