--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -11,11 +11,12 @@
   justify-content: center;
   align-items: center;
   height: 90vh;
+  background: rgba(86, 67, 196, 0.247);
 }
 
 .container {
   display: contents;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgb(86, 67, 196);
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -25,5 +26,5 @@
 .text {
   text-align: center;
   padding: 10px;
-  color: #3a4547;
+  color: white;
 }
