--- a/src/components/filter/Filter.module.css
+++ b/src/components/filter/Filter.module.css
@@ -1,26 +1,10 @@
-.filter_input {
+.label {
   display: inline-flex;
   flex-direction: column;
-  background: rgb(86, 67, 196);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  padding: 10px;
-  border-radius: 10px;
-  color: white;
-  margin-top: 20px;
 }
 
-.filter_label {
+.wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    font-size: 30px;
-    font-weight: 700;
-    
 }
